@@ -1,3 +1,7 @@
+09 September 2010 W. Michael Petullo <mike@flyn.org>
+
+	* Add DMAPMediaKind enum.
+
 06 September 2010 W. Michael Petullo <mike@flyn.org>
 
 	* Fix serving to iTunes 10.
